# SVG-DRAW-FMI-Project

./: CMakeLists.txt  main.cpp
cpps/: circle.cpp  group.cpp  line.cpp  pugixml.cpp  rectangle.cpp  shape.cpp
headers/: circle.h  group.h  line.h  pugixml.h  rectangle.h  shape.h
